# recursos_humanos

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.MD  diesel.toml  docker-compose.yml
backend/: Cargo.toml  README.MD
backend/migrations/2025-03-27-035312_create_users/: up.sql
backend/migrations/2025-04-24-214259_create_admin/: down.sql  up.sql
backend/migrations/2025-05-09-043142_create_vacancies/: down.sql  up.sql
backend/migrations/2025-05-09-045702_create_applications/: up.sql
backend/migrations/2025-05-09-050728_create_evaluations/: up.sql
backend/migrations/2025-05-09-050929_create_trainings/: up.sql
backend/src/: main.rs  schema.rs
backend/src/handlers/: mod.rs  user_handlers.rs  vacancies_handlers.rs
backend/src/models/: mod.rs  user.rs  vacancy.rs
backend/src/responses/: json_response.rs  mod.rs
backend/src/routes/: auth_routes.rs  mod.rs  vacancies_routes.rs
backend/src/services/: mod.rs  user_services.rs  vacancies_services.rs  welcome.rs
backend/src/state/: app_state.rs
frontend/: README.MD  app.js  package-lock.json  package.json
frontend/routes/: routes.js
frontend/views/: dashboard.ejs  dashboard_admin.ejs  login.ejs
migrations/2025-03-27-035312_create_users/: up.sql
migrations/2025-04-24-214259_create_admin/: up.sql
migrations/2025-05-09-043142_create_vacancies/: up.sql
migrations/2025-05-09-045702_create_applications/: up.sql
migrations/2025-05-09-050728_create_evaluations/: down.sql  up.sql
migrations/2025-05-09-050929_create_trainings/: down.sql  up.sql
src/: main.rs  responses.rs  schema.rs
(+15 files in other folders)
